Added levels and dynamic input box border color

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
 </div>
 
-
+    <h2 id="level-text">Level 1: Fruits</h2>
     <p id="scrambled-word"></p>
     <input type="text" id="user-input" />
     <button onclick="checkAnswer()">Check Answer</button>
